@startuml

title __EXTEND's Class Diagram__\n

  namespace princess.connect {
    namespace extend {
      class princess.connect.extend.Animation {
          {static} + DEFAULT_DELAY : int
          # _counter : int
          # _frameIndex : int
          # _visible : boolean
          - _delay : int
          - _frames : ArrayList<MovingBitmap>
          - _repeating : boolean
          - _x : int
          - _y : int
          + Animation()
          + Animation()
          + addFrame()
          + addFrame()
          + addFrame()
          + getCurrentFrameIndex()
          + getFrameCount()
          + getHeight()
          + getWidth()
          + getX()
          + getY()
          + inversion()
          + isLastFrame()
          + move()
          + release()
          + reset()
          + setCurrentFrameIndex()
          + setDelay()
          + setLocation()
          + setRepeating()
          + setVisible()
          + show()
      }
    }
  }
  

  namespace princess.connect {
    namespace extend {
      class princess.connect.extend.BitmapButton {
          - _handlers : List<ButtonEventHandler>
          - _hovered : boolean
          - _id : String
          - _pressed : boolean
          - _visible : boolean
          - _x : int
          - _y : int
          + BitmapButton()
          + BitmapButton()
          + BitmapButton()
          + BitmapButton()
          + BitmapButton()
          + BitmapButton()
          + BitmapButton()
          + BitmapButton()
          + addButtonEventHandler()
          + loadBitmap()
          + loadBitmap()
          + loadHoverdBitmap()
          + loadHoveredBitmap()
          + loadPressedBitmap()
          + loadPressedBitmap()
          + move()
          + pointerMoved()
          + pointerPressed()
          + pointerReleased()
          + release()
          + removeButtonEventHandler()
          + resize()
          + resize_h()
          + resize_w()
          + setLocation()
          + setVisible()
          + show()
          - contains()
          - contains()
          - notifyButtonEventHandlers()
          - releaseImage()
          - setImageLocation()
      }
    }
  }
  

  namespace princess.connect {
    namespace extend {
      interface princess.connect.extend.ButtonEventHandler {
          {abstract} + perform()
      }
    }
  }
  

  namespace princess.connect {
    namespace extend {
      class princess.connect.extend.Integer {
          {static} + DEFAULT_DIGITS : int
          - _digitImages : MovingBitmap[]
          - _digits : int
          - _value : int
          - _x : int
          - _y : int
          + Integer()
          + Integer()
          + Integer()
          + add()
          + getValue()
          + move()
          + release()
          + setDigits()
          + setLocation()
          + setValue()
          + show()
          + subtract()
          - initialize()
      }
    }
  }
  

  princess.connect.extend.Animation .up.|> princess.connect.GameObject
  princess.connect.extend.BitmapButton .up.|> princess.connect.GameObject
  princess.connect.extend.BitmapButton .up.|> princess.connect.PointerEventHandler
  princess.connect.extend.BitmapButton o-- princess.connect.core.MovingBitmap : _hoveredImage
  princess.connect.extend.BitmapButton o-- princess.connect.core.MovingBitmap : _normalImage
  princess.connect.extend.BitmapButton o-- princess.connect.Pointer : _pointer
  princess.connect.extend.BitmapButton o-- princess.connect.core.MovingBitmap : _pressedImage
  princess.connect.extend.Integer .up.|> princess.connect.GameObject


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
